# VideoPlayer

./: .gitignore  CMakeLists.txt  audio_output.cpp  audio_output.h  audio_resampler.cpp  audio_resampler.h  av_clock.cpp  av_clock.h  decoder.cpp  decoder.h  decoder_backend.cpp  decoder_backend.h  demuxer.cpp  demuxer.h  frame_queue.h  log.cpp  log.h  main.cpp  main_window.cpp  main_window.h  mainwindow.cpp  mainwindow.h  media_objects.h  packet_queue.h  playlist_management_dialog.cpp  playlist_management_dialog.h  playlist_name_dialog.cpp  playlist_name_dialog.h  playlist_store.cpp  playlist_store.h  resources.qrc  safe_queue.h  scoped_exit.h  sdl_audio_backend.cpp  sdl_audio_backend.h  style_loader.cpp  style_loader.h  video_decoder.cpp  video_decoder.h  video_frame.h  (+8 more)
.github/workflows/: build-package.yml
doc/: architecture.uml  flowchart.uml
packaging/: VideoPlayer.desktop
scripts/ci/: package-linux.sh  package-macos.sh  package-windows.sh
styles/: main_window.qss  playlist_management_dialog.qss  playlist_name_dialog.qss  popup_menu.qss  shortcuts_help_dialog.qss  video_fullscreen_window.qss
